--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "dotenv-safe": "^8.2.0",
+    "ley": "^0.8.1",
     "next": "13.2.1",
     "patch-package": "^6.5.1",
+    "postgres": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.58.3",
@@ -20,6 +24,8 @@
   "devDependencies": {
     "@babel/eslint-parser": "7.19.1",
     "@next/eslint-plugin-next": "13.2.1",
+    "@types/bcrypt": "^5.0.0",
+    "@types/dotenv-safe": "^8.1.2",
     "@types/eslint": "8.21.1",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
