--- a/package.json
+++ b/package.json
@@ -7,19 +7,24 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "dotenv ley"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
+    "dotenv-cli": "^7.0.0",
     "dotenv-safe": "^8.2.0",
     "ley": "^0.8.1",
+    "migrate": "^1.8.0",
     "next": "13.2.1",
     "patch-package": "^6.5.1",
     "postgres": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.58.3",
-    "sharp": "^0.31.3"
+    "sharp": "^0.31.3",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.19.1",
