--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cookie": "^0.5.0",
     "dotenv": "^16.0.3",
     "dotenv-cli": "^7.0.0",
     "dotenv-safe": "^8.2.0",
