--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "migrate": "dotenv ley"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.13",
     "bcrypt": "^5.1.0",
     "cookie": "^0.5.0",
     "dotenv": "^16.0.3",
