Add the students sessionToken

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
+    "@types/cookie": "^0.5.1",
     "bcrypt": "^5.1.0",
     "cookie": "^0.5.0",
     "dotenv": "^16.0.3",
@@ -28,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.58.3",
+    "save-dev": "^0.0.1-security",
     "sharp": "^0.31.3",
     "zod": "^3.20.6"
   },
@@ -44,6 +46,7 @@
     "@typescript-eslint/parser": "5.53.0",
     "@upleveled/eslint-config-upleveled": "^3.10.1",
     "@upleveled/eslint-plugin-upleveled": "2.1.6",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.34.0",
     "eslint-config-react-app": "7.0.1",
     "eslint-import-resolver-typescript": "3.5.3",
@@ -58,11 +61,13 @@
     "eslint-plugin-sonarjs": "0.18.0",
     "eslint-plugin-testing-library": "5.10.2",
     "eslint-plugin-unicorn": "45.0.2",
+    "postcss": "^8.4.21",
     "postcss-styled-syntax": "0.3.3",
     "stylelint": "15.2.0",
     "stylelint-config-css-modules": "4.2.0",
     "stylelint-config-recommended": "10.0.1",
     "stylelint-config-recommended-scss": "9.0.1",
+    "tailwindcss": "^3.2.7",
     "typescript": "4.9.5"
   },
   "resolutions": {
