--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "dotenv": "^16.0.3",
     "dotenv-cli": "^7.0.0",
     "dotenv-safe": "^8.2.0",
+    "init": "^0.1.2",
     "ley": "^0.8.1",
     "migrate": "^1.8.0",
-    "next": "13.2.1",
+    "next": "13.2.4",
     "patch-package": "^6.5.1",
     "postgres": "^3.3.3",
     "react": "18.2.0",
