--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@fortawesome/fontawesome-free": "^6.3.0",
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
     "@types/cookie": "^0.5.1",
     "bcrypt": "^5.1.0",
     "cookie": "^0.5.0",
+    "daisyui": "^2.51.5",
     "dotenv": "^16.0.3",
     "dotenv-cli": "^7.0.0",
     "dotenv-safe": "^8.2.0",
