--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
   "devDependencies": {
     "@babel/eslint-parser": "7.19.1",
     "@next/eslint-plugin-next": "13.2.1",
+    "@playwright/test": "^1.32.1",
     "@types/bcrypt": "^5.0.0",
     "@types/dotenv-safe": "^8.1.2",
     "@types/eslint": "8.21.1",
+    "@types/jest": "^29.5.0",
     "@types/node": "18.14.1",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -67,6 +69,7 @@
     "eslint-plugin-sonarjs": "0.18.0",
     "eslint-plugin-testing-library": "5.10.2",
     "eslint-plugin-unicorn": "45.0.2",
+    "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.21",
     "postcss-styled-syntax": "0.3.3",
     "stylelint": "15.2.0",
