--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "eslint-plugin-sonarjs": "0.18.0",
     "eslint-plugin-testing-library": "5.10.2",
     "eslint-plugin-unicorn": "45.0.2",
+    "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "postcss": "^8.4.21",
     "postcss-styled-syntax": "0.3.3",
