--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ley": "^0.8.1",
     "migrate": "^1.8.0",
     "next": "13.2.4",
+    "next-pwa": "^5.6.0",
     "patch-package": "^6.5.1",
     "postgres": "^3.3.3",
     "react": "18.2.0",
